third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-dst-not-frombytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
note: required by `AssertIsFromBytes`
  --> tests/ui-msrv/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
